# BacktestPlayground

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  example_run.py  infra_attempt.py  portfolio_metrics.db  pyproject.toml  run_strategies.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/db/: database.py
backend/models/: records.py
backtester/: __init__.py
backtester/market_data/: base.py  market.py  market_data_feed.py  sqlite_market_data_cache.py
backtester/static_data/: __init__.py
backtester/strategy/: strategy.py
backtester/trade/: trade.py
components/: __init__.py
components/backtester/: all_backtesters.py  base_model.py  simple_backtester.py
components/execution/: all_engines.py  base_model.py  ib_engine.py  simple_engine.py
components/job/: base_model.py
components/market/: __init__.py  market_data_feed.py  sqlite_market_data_cache.py
components/market_data/: market.py
components/metrics/: base_model.py
components/regime/: base_model.py  hmm_engine.py  multi_hmm_engine.py  naive_engine.py  regime_engines.py
components/reporter/: base_model.py
components/strategies/: all_strategies.py  angular_momentum.py  base_model.py  fallback_strategy.py  gradient_momentum.py  mean_reversion.py  momentum_strategy.py  volatility_breakout.py
components/trades/: intent_model.py  trade_model.py
configs/: example_config.py
data/: portfolio_metrics.db
engine/: orchestrator.py
frontend/: Dashboard.py  db_utils.py  st_utils.py  strategy_util.py
tests/: test_example.py
(+10 files in other folders)
