[tool.poetry]
name = "backtest"
version = "0.1.0"
description = ""
authors = ["joshua-ashmore <114852555+joshua-ashmore@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.7"
yfinance = "^0.2.63"
scipy = "^1.15.3"
statsmodels = "^0.14.4"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
ipykernel = "^6.29.5"
reportlab = "^4.4.3"
altair = "^5.5.0"
streamlit = "^1.47.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
